--- a/portfolio.html
+++ b/portfolio.html
@@ -20,14 +20,14 @@
           <span class="logo-black">studio</span></a
         >
 
-        <ul class="list">
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <ul class="site-nav list">
+          <li><a href="" class="link">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
-        <ul class="list">
+        <ul class="site-nav list">
           <li>
-            <a href="mailto:info@devstudio.com"
+            <a href="mailto:info@devstudio.com" class="mail"
               ><img
                 src="./images/envelope(hover).svg"
                 alt="envelope"
@@ -46,7 +46,7 @@
     <main>
       <section class="product">
         <!--invisible heading-->
-        <h1 class="title">Наша продукция</h1>
+        <h1 class="name">Наша продукция</h1>
         <ul class="list">
           <li><button type="button">Все</button></li>
           <li><button type="button">Веб-сайты</button></li>
