--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <main>
       <section class="hero">
         <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-        <a href="" class="button">Заказать услугу</a>
+        <a class="button-primary" href="">Заказать услугу</a>
       </section>
       <!--Преимущества-->
       <section class="section">
