--- a/index.html
+++ b/index.html
@@ -254,13 +254,24 @@
     </main>
     <!--Футер-->
     <footer>
-      <ul class="list">
+      <ul class="logo list">
         <li>
-          <p>Web studio</p>
+          <p>
+            <span class="logo-blue">Web</span>
+            <span class="logo-black">studio</span>
+          </p>
           <address>
-            <p>г. Киев, пр-т Леси Украинки, 26</p>
-            <a href="mailto:info@example.com">info@example.com</a>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>
+            <p class="adress">г. Киев, пр-т Леси Украинки, 26</p>
+            <p>
+              <a href="mailto:info@example.com" class="adress-contact"
+                >info@example.com</a
+              >
+            </p>
+            <p>
+              <a href="tel:+380991111111" class="adress-contact"
+                >+38 099 111 11 11</a
+              >
+            </p>
           </address>
         </li>
 
