--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -35,7 +35,7 @@
             >
           </li>
           <li>
-            <a href="tel:+380961111111"
+            <a href="tel:+380961111111" class="phone"
               ><img src="./images/smartphone.svg" alt="smartphone" />+38 096
               11111 11</a
             >
@@ -48,11 +48,13 @@
         <!--invisible heading-->
         <h1 class="name">Наша продукция</h1>
         <ul class="list">
-          <li><button type="button">Все</button></li>
-          <li><button type="button">Веб-сайты</button></li>
-          <li><button type="button">Приложения</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+          <li><button type="button" class="product-name">Все</button></li>
+          <li><button type="button" class="product-name">Веб-сайты</button></li>
+          <li>
+            <button type="button" class="product-name">Приложения</button>
+          </li>
+          <li><button type="button" class="product-name">Дизайн</button></li>
+          <li><button type="button" class="product-name">Маркетинг</button></li>
         </ul>
         <ul class="list">
           <li>
@@ -60,8 +62,8 @@
               <img src="./images/img1.jpg" alt="текст" width="370"
             /></a>
             <h2 class="product-title">Технокряк</h2>
-            <p>Веб-сайт</p>
-            <p>
+            <p class="product-item">Веб-сайт</p>
+            <p class="product-text">
               Технокряк это современная площадка распространения коронавируса.
               Компании используют эту платформу для цифрового шпионажа и атак на
               защищённые сервера конкурентов.
@@ -70,8 +72,8 @@
           <li>
             <img src="./images/img2.jpg" alt="постер" />
             <h2 class="product-title">Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
-            <p>
+            <p class="product-item">Дизайн</p>
+            <p class="product-text">
               Технокряк это современная площадка распространения коронавируса.
               Компании используют эту платформу для цифрового шпионажа и атак на
               защищённые сервера конкурентов.
@@ -80,8 +82,8 @@
           <li>
             <img src="./images/img3.jpg" alt="ресторан" />
             <h2 class="product-title">Ресторан Seafood</h2>
-            <p>Приложение</p>
-            <p>
+            <p class="product-item">Приложение</p>
+            <p class="product-text">
               Технокряк это современная площадка распространения коронавируса.
               Компании используют эту платформу для цифрового шпионажа и атак на
               защищённые сервера конкурентов.
@@ -90,8 +92,8 @@
           <li>
             <img src="./images/img4.jpg" alt="наушники" />
             <h2 class="product-title">Проект Prime</h2>
-            <p>Маркетинг</p>
-            <p>
+            <p class="product-item">Маркетинг</p>
+            <p class="product-text">
               Технокряк это современная площадка распространения коронавируса.
               Компании используют эту платформу для цифрового шпионажа и атак на
               защищённые сервера конкурентов.
@@ -100,8 +102,8 @@
           <li>
             <img src="./images/img5.jpg" alt="боксы" />
             <h2 class="product-title">Проект Boxes</h2>
-            <p>Приложение</p>
-            <p>
+            <p class="product-item">Приложение</p>
+            <p class="product-text">
               Технокряк это современная площадка распространения коронавируса.
               Компании используют эту платформу для цифрового шпионажа и атак на
               защищённые сервера конкурентов.
@@ -110,7 +112,7 @@
           <li>
             <img src="./images/img6.jpg" alt="комп" />
             <h2 class="product-title">Inspiration has no Borders</h2>
-            <p>
+            <p class="product-text">
               Технокряк это современная площадка распространения коронавируса.
               Компании используют эту платформу для цифрового шпионажа и атак на
               защищённые сервера конкурентов.
@@ -119,8 +121,8 @@
           <li>
             <img src="./images/img7.jpg" alt="издание" />
             <h2 class="product-title">Издание Limited Edition</h2>
-            <p>Дизайн</p>
-            <p>
+            <p class="product-item">Дизайн</p>
+            <p class="product-text">
               Технокряк это современная площадка распространения коронавируса.
               Компании используют эту платформу для цифрового шпионажа и атак на
               защищённые сервера конкурентов.
@@ -129,8 +131,8 @@
           <li>
             <img src="./images/img8.jpg" alt="проектлаб" />
             <h2 class="product-title">Проект LAB</h2>
-            <p>Маркетинг</p>
-            <p>
+            <p class="product-item">Маркетинг</p>
+            <p class="product-text">
               Технокряк это современная площадка распространения коронавируса.
               Компании используют эту платформу для цифрового шпионажа и атак на
               защищённые сервера конкурентов.
@@ -139,8 +141,8 @@
           <li>
             <img src="./images/img9.jpg" alt="ноут" />
             <h2 class="product-title">Growing Business</h2>
-            <p>Приложение</p>
-            <p>
+            <p class="product-item">Приложение</p>
+            <p class="product-text">
               Технокряк это современная площадка распространения коронавируса.
               Компании используют эту платформу для цифрового шпионажа и атак на
               защищённые сервера конкурентов.
@@ -151,13 +153,24 @@
     </main>
     <!--Футер-->
     <footer>
-      <ul class="list">
+      <ul class="logo list">
         <li>
-          <p>Web studio</p>
+          <p>
+            <span class="logo-blue">Web</span>
+            <span class="logo-black">studio</span>
+          </p>
           <address>
-            <p>г. Киев, пр-т Леси Украинки, 26</p>
-            <a href="mailto:info@example.com">info@example.com</a>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>
+            <p class="adress">г. Киев, пр-т Леси Украинки, 26</p>
+            <p>
+              <a href="mailto:info@example.com" class="adress-contact"
+                >info@example.com</a
+              >
+            </p>
+            <p>
+              <a href="tel:+380991111111" class="adress-contact"
+                >+38 099 111 11 11</a
+              >
+            </p>
           </address>
         </li>
 
